# hh_and_sj_parsing

./: README.md  main.py  pyproject.toml
classes/: class_api.py  class_json_saver.py  class_vacancies.py
utils/: utils.py
